# med_platform_backend

./: .coverage  .coveragerc  .dockerignore  .env.example  .example.env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  run.sh  testing-Dockerfile  views.py
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
apps/: .coverage
apps/accounts/: admin.py  auth.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py  viewsets.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_middle_name.py  0003_alter_patient_link_token.py  0004_alter_patient_link_token.py  0005_auto_20211204_1444.py  0006_auto_20211223_0654.py  0007_alter_patient_link_token.py  0008_patient_sex.py  0009_auto_20220223_0738.py  0010_doctor_contact_details.py  0010_patient_cpfc.py  0011_auto_20220421_1405.py  0012_historicalpatient.py  0013_doctor_contact_details.py  0014_auto_20220703_1407.py
apps/menus/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py  viewsets.py
apps/menus/migrations/: 0001_initial.py  0002_daydish_comment.py  0003_additionaldaydish.py  0004_auto_20220403_1538.py  0005_auto_20220404_1602.py  0006_alter_daydish_additional_to.py  0007_day_date.py  0008_auto_20220521_1237.py  0008_auto_20220521_1328.py  0009_alter_day_date.py  0010_alter_day_number.py  0011_alter_dish_user.py  0012_auto_20220607_0920.py
deploy/: Dockerfile
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
med_communication_platform/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
menus/: admin.py  models.py
menus/migrations/: 0001_initial.py
templates/: base.html
tests/: .coverage  conftest.py
tests/test_accounts/: factories.py  test_views.py  test_viewsets.py
tests/test_menus/: conftest.py  factories.py  test_viewset.py  test_viewsets.py
utils/: emails.py  functions.py
