[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ramil Suleymanov <lllumineux@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
djangorestframework = "^3.12.4"
transliterate = "^1.10.2"
python-dotenv = "^0.19.2"
psycopg2-binary = "^2.9.2"
whitenoise = "^5.3.0"
gunicorn = "^20.1.0"
djangorestframework-simplejwt = "^5.0.0"
django-cors-headers = "^3.10.1"
drf-yasg = "^1.20.0"
sentry-sdk = "^1.5.10"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 120
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
